<resources>
    <string name="app_name">LovePet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">欢迎你加入宠物寄养</string>
    <string name="login_hint_phone">请输入手机号码</string>
    <string name="login_hint_pass">请输入密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_btn_login">登 录</string>
    <string name="login_tv_text">使用第三方账号登录</string>
    <string name="wechat_check">获得你的公开信息（昵称、头像等）</string>
    <string name="wechat_text">登录后该应用将获得以下权限</string>
    <string name="bind_phone">请填写手机号码</string>
    <string name="bind_hqyzm">获取验证码</string>
    <string name="bind_et_yanzhengma">请输入验证码</string>
    <string name="bind_et_name">请输入用户名</string>
    <string name="bind_et_pass">请输入密码</string>
    <string name="bind_et_num_pass">设置6位数字密码</string>
    <string name="bind_et_sure">确定</string>
    <string name="login_tv_registered">注册</string>
    <string name="register_tv_text">使用第三方账号注册</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="update_now">下载安装</string>
    <string name="app_download_finish">下载完成</string>
    <string name="input_filter">号码不能为空!</string>
    <string name="cancle_dial_mode">取消</string>
    <string name="free_dial_mode">语音聊天</string>
    <string name="direct_dial_mode">网络直拨</string>
    <string name="back_dial_mode">回拨电话</string>
    <string name="common_dial">普通电话</string>
    <string name="toast_call_phone_error">您手机的拨号权限受到限制，请打开</string>
    <string name="voip_net_unavailable">当前网络不可用，请检查你的网络设置</string>
    <string name="network_dial_number_format">请拨打正确的手机号或带有区号的座机电话。</string>
    <string name="sdk_init_title">网络电话正在初始化，请您稍等&#8230;</string>
    <string name="back_dial_dialog_body">使用回拨方式会先有一个电话拨打到您的手机，需要您接听后才能呼叫到对方。</string>
    <string name="iknow">知道了</string>
    <string name="reselect_dial">返回选择</string>
    <string name="net_warning">非3G/wifi网络，为保证通话质量请设置网络或选用网络回拨呼叫。</string>
    <string name="dial_continue_title">继续拨打</string>
    <string name="direct_dial_dialog_body">使用网络直拨呼叫对方,不扣手机通讯费。</string>
    <string name="no_support_sip">呼叫号码不合法！</string>
    <string name="ec_app_title_chatroom">语音群聊</string>
    <string name="ec_app_title_inter_phone">实时对讲</string>
    <string name="ec_empty_inter_phone">暂无实时对讲房间</string>
    <string name="ec_empty_voice_meeting">暂无语音群聊房间</string>
    <string name="ec_str_voice_room_bottom1">长按麦克风开始抢麦</string>
    <string name="ec_str_voice_room_bottom2">抢麦成功会有振动反馈即可开始说话</string>
    <string name="ec_str_voice_room_bottom3">失败则需要重新抢</string>
    <string name="ec_str_voice_room_bottom4">其实&#8230;等TA说完再按就不用抢了嘛&#8230;</string>
    <string name="ec_str_join_speaking">已加入,正在说话中&#8230;</string>
    <string name="str_join_wait">等待加入</string>
    <string name="str_join_success">已加入</string>
    <string name="str_join_speaking">已加入,正在说话中&#8230;</string>
    <string name="str_join_quit">已退出</string>
    <string name="str_btn_launch_talkback">发起对讲</string>
    <string name="str_btn_launch_chatroom">发起群聊</string>
    <string name="str_chatroom_list_join_unfull" formatted="false">%1$s人加入,由%2$s创建</string>
    <string name="str_chatroom_list_join_full" formatted="false">%1$s人加入(已满),由%2$s创建</string>
    <string name="meeting_voice_room_error">语音会议房间无效</string>
    <string name="dialog_title_auth">身份验证</string>
    <string name="dialog_message_chatroom_auth_reason">该聊天室设置了身份验证,请输入密码</string>
    <string name="str_chatroom_name">房间名称:</string>
    <string name="str_chatroom_pwd">房间密码:</string>
    <string name="str_chatroom_name_input_hit">请输入群聊房间名称</string>
    <string name="str_chatroom_pwd_input_hit">请输入群聊房间密码</string>
    <string name="str_room_tyep_spinner">选择房间类型</string>
    <string name="str_tone_tyep_spinner">选择声音模式</string>
    <string name="tip_autoclose">创建人退出时自动解散</string>
    <string name="tip_autojoin">创建人是否自动加入</string>
    <string name="tip_auto_del">创建人退出时自动删除房间</string>
    <string name="app_title_chatroom_create">创建语音群聊</string>
    <string name="app_create">创建</string>
    <string name="app_title_right_button_pull_down">管理</string>
    <string name="app_title_right_button_pull_down_1">其他</string>
    <string name="top_tips_connecting_wait">连接中,请稍候...</string>
    <string name="str_join_chatroom_success">\t已加入语音群聊</string>
    <string name="str_chatroom_mike_enable">可点击下方麦克风静音</string>
    <string name="str_chatroom_mike_disenable">麦克风已关闭，可点击开启</string>
    <string name="dialog_title_dissmiss_chatroom">解散确认</string>
    <string name="dialog_message_dissmiss_chatroom">您确定要解散该房间吗，解散后不可恢复 </string>
    <string name="dailog_button_dissmiss_chatroom">解散 </string>
    <string name="dialog_title_be_dissmiss_chatroom">房间被解散 </string>
    <string name="dialog_message_be_dissmiss_chatroom">抱歉，该房间已被创建者解散，点击确定以退出 </string>
    <string name="dialog_title_be_kick_chatroom">您已被请出房间 </string>
    <string name="dialog_message_be_kick_chatroom">抱歉,您被创建者请出房间了,点击确定以退出 </string>
    <string name="current_meeting_voice" formatted="false">当前处于%1$s会议中</string>
    <string name="current_meeting_tips">会议正在进行中</string>
    <string name="str_chatroom_kick">%s被踢出房间</string>
    <string name="str_chatroom_exit">%s退出房间</string>
    <string name="str_chatroom_join">%s\t加入房间</string>
    <string name="top_tips_chatroom_forbid">(%1$s)被设置为禁言模式</string>
    <string name="top_tips_chatroom_disforbid">(%1$s)被取消禁言模式</string>
    <string name="chatroom_forbid_speak_message">您被会议管理员设置为禁言模式，你的发言将无法被会议成员所听到</string>
    <string name="chatroom_room_exit_room">退出会议</string>
    <string name="chatroom_room_exit_room_tip">退出后，你将不再接收会议消息</string>
    <string name="pull_invited_phone_member">邀请电话用户加入</string>
    <string name="pull_manager_member">管理成员</string>
    <string name="pull_dissolution_room">解散房间</string>
    <string name="pull_mode_speaker">使用扬声器模式</string>
    <string name="pull_mode_earpiece">使用听筒模式</string>
    <string name="fmt_route_phone">已切换为听筒播放模式</string>
    <string name="fmt_route_speaker">已切换为扬声器播放模式</string>
    <string name="member_empty_meeting">暂无可管理的会议成员</string>
    <string name="chatroom_permission_remove">移除</string>
    <string name="chatroom_permission_mute">禁言</string>
    <string name="chatroom_permission_mute_revert">恢复</string>
    <string name="meeting_member_mgr_title">会议成员管理</string>
    <string name="dialog_title_summary">请输入要邀请加入电话会议的电话号码（固号需加拨区号），对方将接到一个电话，接通后即可加入会议</string>
    <string name="dialog_title_invite">接听电话加入群聊</string>
    <string name="app_title_right_button">邀请</string>
    <string name="toast_confno_Illegal">会议号不合法</string>
    <string name="regbymobile_reg_mobile_format_err_msg">你输入的不是一个有效的手机号码</string>
    <string name="mainui_menu_addnewcontact">新建联系人</string>
    <string name="mainui_menu_sms">发送信息</string>
    <string name="str_introduce_back_call">回拨电话（双向收费-通话质量优秀）：一方发起通话请求后，平台会分别向双方拨打落地电话</string>
    <string name="str_introduce_direct_call">网络直拨（单项收费-通话质量良好）：一方为app端经IP网络发起，呼叫给另一方落地手机、座机的通话方式</string>
    <string name="str_introduce_free_call">语音聊天（免费-通话质量一般）：基于网络对网络的电话</string>
    <string name="str_introduce_common_call">普通电话：直接拨打对方手机号</string>
    <string name="str_introduce_call">您可根据自身网络情况进行选择通话方式</string>
    <string name="menu_item_call">呼叫</string>
    <string name="menu_item_view_contact">查看联系人</string>
    <string name="menu_item_add_contact">添加到联系人</string>
    <string name="menu_item_del_record">删除本条记录</string>
    <string name="main_conversation_longclick_markRead">标为已读</string>
    <string name="main_conversation_longclick_setUnRead">标为未读</string>
    <string name="ec_call_number_error">呼叫的号码错误</string>
    <string name="ec_app_err_disconnect_server_tip">无法连接服务器，请稍后再试</string>
    <string name="ec_voip_call_connecting_server">正在连接服务器&#8230;</string>
    <string name="ec_voip_call_connect">正在呼叫对方，请稍后&#8230;</string>
    <string name="ec_voip_calling_wait">等待对方接听&#8230;</string>
    <string name="ec_voip_calling_finish">通话结束</string>
    <string name="ec_voip_call_back_success">回拨呼叫成功，请注意接听系统来电!</string>
    <string name="str_tips_wait_invited">正在等待对方接受邀请&#8230;</string>
    <string name="vedio_switch">音视频切换</string>
    <string name="str_call_status" formatted="false">延迟时间%d（毫秒）丢包率:%d</string>
    <string name="str_video_call_stop">结束视频通话</string>
    <string name="str_video_call_begin">开始视频通话</string>
    <string name="str_video_btn_call_end">结束</string>
    <string name="str_video_bottom_time" formatted="false">与%1$s视频通话中\t</string>
    <string name="camera_switch_front">切换至前置摄像头</string>
    <string name="camera_switch_back">切换至后置摄像头</string>
    <string name="str_vedio_call_in" formatted="false">来自%1$s的视频\t</string>
    <string name="mute">禁言</string>
    <string name="kick">踢出</string>
    <string name="hint_search_selectcontact">搜索或邀请陌生号码</string>
    <string name="select_all">全选</string>
    <string name="select_photo">选择图片</string>
    <string name="upload_idcard_photo">上传身份证照片</string>
    <string name="upload_zhanshi_photo">上传展示照片</string>
    <string name="comment">评价</string>
    <string name="true_name">真实姓名</string>
    <string name="phone_num">电话号码</string>
    <string name="family_address">家庭地址</string>
    <string name="input_foster_family">输入寄养家庭地址</string>
    <string name="id_crad">身份证号</string>
    <string name="input_id_card">输入有效身份证号</string>
    <string name="id_card_just">身份证照片(正面)</string>
    <string name="pet_type_price">可寄养宠物类型/价格</string>
    <string name="location_services">可提供其他定位服务</string>
    <string name="foster_info">寄养师介绍</string>
    <string name="my_nickname">我的昵称</string>
    <string name="my_introduce">我的介绍</string>
    <string name="upload_photo">上传照片</string>
    <string name="agree">同意</string>
    <string name="two_agreement">《双方寄养服务协议》</string>
    <string name="input_price">请输入价格</string>
    <string name="yuan_day">元/天</string>
    <string name="upload_photo_tv">上传1张寄养师本人正面居家照（宠物店上传营业执照）审核备案不公开</string>
    <string name="upload_show_photo">上传展示图片。不少于3张环境照，必须包括宠物室内及室外活动区（其他照片展示不限）</string>
    <string name="to_me_commtent">请定下您对我的评价</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="current_city">所在城市</string>
    <string name="conntion_error">未连接网络,请联网重试~</string>
    <string name="suggest_better">写下你的建议让我们做的更好</string>
    <string name="font_count">/250</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="wangji_pwd">忘记密码</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="id_card_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="helloWorld">hello World</string>
    <string name="header_save">保存</string>
    <string name="register_back_text">取消</string>
    <string name="header_title">预约寄养</string>
    <string name="register_welcome_text">欢迎您加入宠物寄养</string>
    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_pwd_hint">请输入6-16位数字,字母,符号</string>
    <string name="register_name_hint">请输入用户名</string>
    <string name="submit_forget_error">修改密码失败，请检查网络后再试</string>
    <string name="register_reg">注册</string>
    <string name="register_third_login">使用第三方账号注册</string>
    <string name="register_qq">手机QQ</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="complete">完成</string>
    <string name="Ordertime">订单时间:</string>
    <string name="Orderfull">订单全额:</string>
    <string name="Amountpayable">应付金额:</string>
    <string name="ordertoagree">以同意</string>
    <string name="fostercare">《双方寄养服务协议》</string>
</resources>