<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    tools:context="jiyun.com.lovepet.ui.pet.activity.BingPhoneActivity">
//hhhh
    <include
        android:id="@+id/bindphone"
        layout="@layout/activity_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_phone"
            android:layout_centerInParent="true"
            android:text="标题" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_bind_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bind_phone" />

            <TextView
                android:id="@+id/hqyzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/hqyzm"
                android:padding="5dp"
                android:text="@string/bind_hqyzm" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_yanzhengma" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_name" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_pass" />

        <EditText
            android:id="@+id/et_num_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_num_pass" />

        <Button
            android:id="@+id/btn_et_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_shap"
            android:text="@string/bind_et_sure" />
    </LinearLayout>
</LinearLayout>
