<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include

        layout="@layout/apptitle" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="0.1dp"
      android:background="@color/colorLightGray"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/colorLightGray"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bind_phone"

                />

            <TextView
                android:id="@+id/Tv_yanzhengma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/hqyzm"
                android:padding="5dp"
                android:text="@string/bind_hqyzm" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_yanzhengma" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_name" />


        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_et_num_pass" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_shap"
            android:text="@string/login_tv_registered"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorFont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/register_tv_text"
                android:textColor="@color/colorFont" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorFont" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/login_weixin"
                android:gravity="center"
                android:text="微信"
                android:textColor="@color/colorFont" />

            <TextView
                android:id="@+id/tv_qqr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_toRightOf="@+id/tv_chart"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/login_qq"
                android:gravity="center"
                android:text="手机QQ"
                android:textColor="@color/colorFont" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
