<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp10"
        android:paddingTop="@dimen/dp10" >

        <jiyun.com.lovepet.ui.CircleImageView
            android:id="@+id/order_foster_image"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:src="@drawable/answering_icon_on" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_toRightOf="@+id/order_foster_image"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/order_foster_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="宠物之家" />

            <TextView
                android:id="@+id/order_foster_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="北京市东城区12号"
                android:textColor="#55000000" />

            <RatingBar
                android:id="@+id/order_ratingbar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp10"
        android:paddingTop="@dimen/dp10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ordertime"
                android:textColor="#55000000" />

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp5"
                android:text="2016-03-05  12:36:28"
                android:textColor="#55000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Orderfull"
                android:textColor="#55000000" />

            <TextView
                android:id="@+id/order_full_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp5"
                android:text="￥160.00"
                android:textColor="#E59707" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amountpayable"
                android:textColor="#55000000" />

            <TextView
                android:id="@+id/order_amount_payable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp5"
                android:text="￥160.00"
                android:textColor="#E59707" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordertoagree"
                android:textColor="#55000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/fostercare"
                android:textColor="#6FC6FF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>